Fix #820 settings: menu not aligned when using custom navbar

--- a/packages/core/src/styles/viewer.scss
+++ b/packages/core/src/styles/viewer.scss
@@ -6,6 +6,10 @@
     position: relative;
     background: $psv-main-background;
     overflow: hidden;
+
+    * {
+        box-sizing: content-box;
+    }
 }
 
 .psv-canvas-container {
